--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "strict": true,
     "esModuleInterop": true,
     "outDir": "bin",
-    "rootDir": "src"
+    "rootDir": "src",
+    "declaration": true
   },
   "compileOnSave": true
 }
