--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "runupto-shared",
-  "version": "1.0.0",
-  "main": "src/index.ts",
+  "version": "1.0.1",
+  "main": "bin/index.js",
   "repository": "https://github.com/jackall3n/runupto-shared",
   "author": "Jack Allen <jackallensemail+git@gmail.com>",
   "license": "MIT",
